--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -1,6 +1,6 @@
 {% extends "./base.html" %}
 {% load static %}
-{% block title %}BookStore{% endblock %}
+{% block title %}Django Shop{% endblock %}
 {% block content %}
 
 
@@ -11,7 +11,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="h1 fw-bold">Search, Read, Buy, Review</h1>
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-          etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+          etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
         <p>
           <a href="#" class="btn btn-primary my-2">Make an account</a>
         </p>
@@ -22,7 +22,7 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="pb-3 h5">All Books</div>
+      <div class="pb-3 h5">All</div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
 
         {% for product in products %}
