basket is finally here bitch

--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -1,6 +1,6 @@
 {% extends "./base.html" %}
 {% load static %}
-{% block title %}Django Shop{% endblock %}
+{% block title %}Django Store{% endblock %}
 {% block content %}
 
 
@@ -9,9 +9,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-3">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="h1 fw-bold">Search, Read, Buy, Review</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-          etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+        <h1 class="h1 fw-bold">Lorem ipsum dolor sit.</h1>
+        <p class="lead text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt fugit ab suscipit rem aut aspernatur necessitatibus corrupti odio mollitia earum molestias unde dolor sed ea tempora temporibus, iusto deleniti dolorum!</p>
         <p>
           <a href="#" class="btn btn-primary my-2">Make an account</a>
         </p>
@@ -22,7 +21,7 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="pb-3 h5">All</div>
+      <div class="pb-3 h5">All Items</div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
 
         {% for product in products %}
@@ -34,9 +33,6 @@
               <p class="card-text">
                 <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
               </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">9min read</small>
-              </div>
             </div>
           </div>
         </div>
